[package]
name = "mtp3"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
description = "The SS7 MTP3-User SAP (Mtp3UserPart) + point codes — the seam SCCP/ISUP sit on, implemented by MTP3 and M3UA"
authors = ["Real Time Telecom B.V."]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Real-Time-Telecom-B-V/mtp3"
homepage = "https://github.com/Real-Time-Telecom-B-V/mtp3"
keywords = ["ss7", "mtp3", "sigtran", "sccp", "telecom"]
categories = ["network-programming"]
# Keep CI/build scaffolding out of the crates.io package. `python/` (the wheel's
# pure-Python shim) and `pyproject.toml` ship harmlessly, but the dev-only test
# suite under `python/tests/` and the perf/leak rig do not.
exclude = [".github/", "docs/", "scripts/", "python/tests/"]

# cdylib  → maturin/PyO3 build the loadable extension module (the wheel).
# rlib    → crates.io consumers link this; the cdylib is inert for them.
# Building both is the standard PyO3 mixed-layout setup (pydantic-core, orjson).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"

# Optional Python bindings (feature = "python"). Kept out of the default build so
# `cargo add mtp3` and crates.io consumers pull ZERO pyo3. pyo3 >= 0.28 defaults
# modules to `gil_used = false`, so the extension loads on free-threaded ("no-GIL")
# CPython without re-enabling the GIL. abi3-py39 → one forward-compatible wheel for
# regular CPython 3.9+ (free-threaded wheels are built version-specific instead).
pyo3 = { version = "0.29", optional = true, features = ["abi3-py39"] }

[features]
default = []
# Links libpython; enables the bindings. Used by `cargo {test,clippy} --features python`.
python = ["dep:pyo3"]
# Wheel-only: maturin sets this. `pyo3/extension-module` tells pyo3 NOT to link
# libpython, which breaks a Rust test binary — so this is NEVER enabled by
# `cargo test`/`cargo clippy` (and CI must not use `--all-features`).
extension-module = ["python", "pyo3/extension-module"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync"] }
criterion = "0.8"

[[bench]]
name = "pointcode"
harness = false

[lints.clippy]
correctness = { level = "deny", priority = -1 }
